feat: conflicts resolved

--- a/style.css
+++ b/style.css
@@ -38,6 +38,36 @@ ul {
   list-style-type: circle;
 }
 
+.logo {
+  margin: 1rem;
+  width: 100%;
+  padding-bottom: 4rem;
+  padding-top: 8rem;
+}
+
+.contact {
+  margin-left: auto;
+  padding-bottom: 2rem;
+}
+
+button {
+  color: #9f6167;
+  background-color: #fff;
+  border: 2px solid #9f6167;
+  font-size: 1.5rem;
+  padding: 0.5rem 2rem;
+  margin-top: 2rem;
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .logo {
+      padding-top: 3rem;
+    }
+  }
+
 @media (min-width: 375px) {
   body {
     font-size: 16px;
@@ -58,7 +88,16 @@ ul {
   }
 
   .logo {
-    padding-top: 2rem;
+    padding-top: 3rem;
+  }
+
+  .contact {
+    padding-top: 0.1rem;
+    padding-bottom: .5rem;
+  }
+
+  button {
+    margin-top: 1rem;
   }
 }
 
@@ -80,26 +119,15 @@ ul {
   }
 
   .logo {
-    padding-top: 2rem;
+    padding-top: 3rem;
   }
 }
 
 footer {
-  padding-right: 1rem;
-  position: static;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   background-color: #9f6167;
   color: white;
-  text-align: right;
-}
-
-.logo {
-  margin: 1rem;
+  text-align: center;
   width: 100%;
-  padding-bottom: 4rem;
-  padding-top: 8rem;
 }
 
 .headline {
@@ -164,20 +192,8 @@ main {
   animation-delay: 0.7s;
 }
 
-.contact {
-  margin-left: auto;
-  padding-bottom: 3rem;
-}
-
-button {
-  color: #9f6167;
-  background-color: #fff;
-  border: 2px solid #9f6167;
-  font-size: 1.5rem;
-  padding: 0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  margin-top: 2rem;
+.final-content {
+  padding-top: 1rem;
 }
 
 button:hover {
